--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 
-spring.datasource.url = jdbc:h2:~/agendadb;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username = sa
-spring.datasource.password = 
-spring.datasource.driverClassName = org.h2.Driver
-spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5444/muscimoodwheatherdb
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=user
+spring.datasource.password=password
+
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
 
 moodWheather.openwheathermap.api =api.openweathermap.org/data/2.5/
 
