--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,9 @@ services:
         container_name: muscimoodwheatherbackend
         environment:
             - SPRING_DATASOURCE_URL=jdbc:postgresql://muscimoodwheatherdbhost:5432/muscimoodwheatherdb
+            - prop.spotify.cliente_id=${CLIENT_ID}
+            - prop.spotify.secret_id=${SECRET_ID}
+            - prop.spotify.redirect_uri=${REDIREC_URI}
         build:
             context: .
             dockerfile: ./Dockerfile.spring
