--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-CLIENT_ID=b57befbe967546c7b1c6cd391a5696e4
-SECRET_ID=fbe804b1fba64a4283b1c4e76679183b
-
+CLIENT_ID= **insira seu client_id aqui
+SECRET_ID=** insira seu secret_id aqui
 REDIREC_URI=http://localhost:8088/api/callback/authorize
