--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,11 @@ spring.jpa.hibernate.ddl-auto =update
 
 moodWheather.openwheathermap.api =api.openweathermap.org/data/2.5/
 
+#prop.spotify.cliente_id=4fda7f4932bf4c068141a1e526502f7e
+#prop.spotify.secret_id=8c5b88ea1fed465badebafbfa4dfc5de
+#prop.spotify.open_wheather_id=6801fe9e74c3fd9d5a5b0ea6b668d7af
+
+
+prop.spotify.open_wheather_url=https://api.openweathermap.org/data/2.5/weather
 
 
